--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,27 @@
+#container{
+  background-color: grey;
+  height: 400px;
+  width: 800px;
+  margin: 0 auto;
+}
 h1 {
   color: blue;
+  text-align:center;
+}
+
+form{
+  text-align:center;
+}
+
+#result{
+  height: 200px;
+  width: 400px;
+  background-color:red;
+  text-align:center;
+  margin: 40px auto;
+}
+
+h2{
+  padding: 50px;
+  font-size: 100px;
 }
